aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__rsh__tests__rsh_lit_reg.snap
---
source: aya-assembly/src/parser/instructions/rsh.rs
expression: result
---
Instruction(
    RshLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 9,
                end: 13,
            },
        ),
    ),
)
