aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__rsh__tests__rsh_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/rsh.rs
expression: result
---
Instruction(
    RshRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
